--- a/app/src/main/res/layout/activity_final_home2.xml
+++ b/app/src/main/res/layout/activity_final_home2.xml
@@ -69,7 +69,7 @@
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/sos_button_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sos"
