--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,6 +22,7 @@
         app:layout_constraintVertical_bias="0.258">
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image_frament"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_marginTop="20dp"
@@ -29,7 +30,7 @@
             android:src="@drawable/bg" />
 
         <TextView
-            android:id="@+id/username"
+            android:id="@+id/username_profile_fragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
@@ -39,16 +40,6 @@
             android:textSize="24dp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:fontFamily="sans-serif-condensed"
-            android:text="Sanjana's version of profile"
-            android:textColor="#5a2f74"
-            android:textSize="20dp"
-            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -85,9 +76,10 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/email_profile_fragment"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="b@b.com"
+
                         android:textColor="#5a2f74"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -122,9 +114,10 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/phone_profile_fragment"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="01974166204"
+
                         android:textColor="#5a2f74"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -159,9 +152,9 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/address_profile_fragment"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="H-43,R-13,Sector-4,Uttara,Dhaka"
                         android:textColor="#5a2f74"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -196,9 +189,9 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/blood_group_profile_fragment"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="O+ve"
                         android:textColor="#5a2f74"
                         android:textSize="16dp" />
                 </LinearLayout>
