--- a/app/src/main/res/layout/activity_final_home2.xml
+++ b/app/src/main/res/layout/activity_final_home2.xml
@@ -62,7 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@drawable/profile"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/sos_button_home"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,9 +74,11 @@
         android:layout_height="wrap_content"
         android:text="@string/sos"
         android:textSize="20sp"
+        android:backgroundTint="#B22222"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/vPager"
 
         app:layout_constraintVertical_bias="0.976" />
 
