--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -13,7 +13,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Button"
+        android:text="  SOS  "
+        android:fontFamily="sans-serif-condensed"
+        android:textStyle="bold"
+        android:textSize="16dp"
+        android:backgroundTint="#B22222"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/message_recyclerview" />
@@ -51,7 +55,7 @@
         app:layout_constraintStart_toEndOf="@+id/location_msg_button"
         app:layout_constraintTop_toBottomOf="@+id/mssage_sos_button"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/ic_baseline_location_on_24" />
+        app:srcCompat="@drawable/ic_baseline_map_24" />
 
     <ImageButton
         android:id="@+id/send_messages"
@@ -76,6 +80,7 @@
         android:ems="10"
         android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:fontFamily="sans-serif-condensed"
         app:layout_constraintEnd_toStartOf="@+id/send_messages"
         app:layout_constraintStart_toEndOf="@+id/show_location_btn"
         app:layout_constraintTop_toBottomOf="@+id/mssage_sos_button"
