--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SettingActivity">
@@ -29,9 +30,12 @@
         android:layout_width="match_parent"
         android:id="@+id/username_profile_setting"
         android:layout_below="@+id/profile_image_setting"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
+        android:hint="Username"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
         android:layout_marginTop="10dp"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="@color/black"
 
         android:layout_height="wrap_content"/>
@@ -39,9 +43,11 @@
         android:layout_width="match_parent"
         android:id="@+id/email_profile_setting"
         android:layout_below="@+id/username_profile_setting"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:hint="enail"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:hint="Enail"
+        android:fontFamily="sans-serif-condensed"
+        android:textStyle="bold"
         android:textColor="@color/black"
         android:layout_marginTop="10dp"
         android:layout_height="wrap_content"/>
@@ -49,9 +55,11 @@
         android:layout_width="match_parent"
         android:id="@+id/phone_profile_setting"
         android:layout_below="@+id/email_profile_setting"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:hint="phone"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:hint="Phone"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="@color/black"
         android:layout_marginTop="10dp"
         android:layout_height="wrap_content"/>
@@ -59,20 +67,25 @@
         android:layout_width="match_parent"
         android:id="@+id/address_profile_setting"
         android:layout_below="@+id/phone_profile_setting"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="30dp"
+
         android:textColor="@color/black"
-        android:layout_marginLeft="10dp"
-        android:hint="address"
+        android:layout_marginLeft="30dp"
+        android:hint="Address"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-condensed"
         android:layout_marginTop="10dp"
         android:layout_height="wrap_content"/>
     <EditText
         android:layout_width="match_parent"
         android:id="@+id/blood_group_profile_setting"
         android:layout_below="@+id/address_profile_setting"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
         android:textColor="@color/black"
-        android:hint="Blood group"
+        android:hint="Blood Group"
+        android:fontFamily="sans-serif-condensed"
+        android:textStyle="bold"
         android:layout_marginTop="10dp"
         android:layout_height="wrap_content"/>
     <Button
@@ -82,6 +95,8 @@
         android:layout_alignParentEnd="true"
         android:layout_margin="10dp"
         android:text="Save"
+        android:fontFamily="sans-serif-condensed"
+        android:textStyle="bold"
         android:layout_height="wrap_content"/>
 
 </RelativeLayout>
