--- a/app/src/main/res/layout/message_format.xml
+++ b/app/src/main/res/layout/message_format.xml
@@ -8,7 +8,7 @@
         android:id="@+id/message_profile_image"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginLeft="3dp"
         android:src="@drawable/profile_user"
         />
@@ -21,31 +21,12 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="3dp"
         android:layout_toEndOf="@+id/message_profile_image"
-        android:background="#5a2f74"
+        android:background="@drawable/chat_message_bg"
         android:text="receiver messages here"
         android:padding="10dp"
         android:textSize="14sp"
         android:textStyle="bold"
         android:textColor="@color/white"
-        />
-
-
-    <ImageView
-        android:id="@+id/message_sender_image_view"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="5dp"
-        android:scaleType="centerCrop"
-        />
-
-    <ImageView
-        android:id="@+id/message_receiver_image_view"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_alignParentStart="true"
-        android:layout_margin="5dp"
-        android:scaleType="centerCrop"
         />
 
 
@@ -56,7 +37,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="10dp"
         android:layout_alignParentTop="@+id/receiver_message_text"
-        android:background="@color/purple_200"
+        android:background="@drawable/chat_msg_send_bg"
         android:text="sender messages"
         android:textSize="14sp"
         android:padding="10dp"
