--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -13,6 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="472dp"
         android:backgroundTint="#5a2f74"
+        android:fontFamily="sans-serif-condensed"
+        android:textStyle="bold"
         android:text="Send Code"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,9 +54,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="384dp"
         android:clickable="true"
-        android:drawableLeft="@android:drawable/stat_sys_phone_call"
+        android:drawableLeft="@drawable/ic_baseline_phone_24"
         android:ems="10"
         android:hint="Enter Your Phone"
+        android:textAlignment="textStart"
+        android:fontFamily="sans-serif-condensed"
+        android:textStyle="bold"
         android:inputType="phone"
         android:textColorHint="#5a2f74"
         app:layout_constraintEnd_toEndOf="parent"
