--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -17,9 +17,11 @@
             android:layout_marginEnd="16dp"
             android:backgroundTint="#FFFFFF"
             android:text="Sign Up"
+            android:textStyle="bold"
+            android:fontFamily="sans-serif-condensed"
             android:textAlignment="center"
             android:textAllCaps="false"
-            android:textColor="@color/purple_500"
+            android:textColor="#5a2f74"
             android:textColorHighlight="#FFFFFF"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -34,8 +36,13 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/input_bg"
             android:drawableLeft="@drawable/ic_action_user"
+            android:drawableTint="#5a2f74"
             android:ems="10"
-            android:hint="UserName"
+            android:hint=" UserName"
+            android:textColorHint="#5a2f74"
+            android:textColor="#5a2f74"
+            android:textStyle="bold"
+            android:fontFamily="sans-serif-condensed"
             android:inputType="textPersonName"
             android:paddingLeft="20dp"
             android:paddingTop="10dp"
@@ -54,7 +61,11 @@
             android:background="@drawable/input_bg"
             android:drawableLeft="@drawable/ic_action_pass"
             android:ems="10"
-            android:hint="Confirm Password"
+            android:hint=" Confirm Password"
+            android:textColorHint="#5a2f74"
+            android:textColor="#5a2f74"
+            android:textStyle="bold"
+            android:fontFamily="sans-serif-condensed"
             android:inputType="textPassword"
             android:paddingLeft="20dp"
             android:paddingTop="10dp"
@@ -73,7 +84,11 @@
             android:background="@drawable/input_bg"
             android:drawableLeft="@drawable/ic_action_pass"
             android:ems="10"
-            android:hint="Password"
+            android:hint=" Password"
+            android:textColorHint="#5a2f74"
+            android:textColor="#5a2f74"
+            android:textStyle="bold"
+            android:fontFamily="sans-serif-condensed"
             android:inputType="textPassword"
             android:paddingLeft="20dp"
             android:paddingTop="10dp"
@@ -92,8 +107,13 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/input_bg"
             android:drawableLeft="@android:drawable/sym_action_email"
+            android:drawableTint="#5a2f74"
             android:ems="10"
-            android:hint="Email "
+            android:hint=" Email"
+            android:textColorHint="#5a2f74"
+            android:textColor="#5a2f74"
+            android:textStyle="bold"
+            android:fontFamily="sans-serif-condensed"
             android:inputType="textEmailAddress"
             android:paddingLeft="20dp"
             android:paddingTop="10dp"
@@ -110,8 +130,13 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/input_bg"
             android:drawableLeft="@android:drawable/stat_sys_phone_call"
+            android:drawableTint="#5a2f74"
             android:ems="10"
-            android:hint="PhoneNumber"
+            android:hint=" PhoneNumber"
+            android:textColorHint="#5a2f74"
+            android:textColor="#5a2f74"
+            android:fontFamily="sans-serif-condensed"
+            android:textStyle="bold"
             android:inputType="phone"
             android:paddingLeft="20dp"
             android:paddingTop="10dp"
@@ -125,13 +150,16 @@
         <Button
             android:id="@+id/register_signup"
             android:layout_width="138dp"
-            android:layout_height="51dp"
+            android:layout_height="57dp"
             android:layout_marginTop="8dp"
-            android:backgroundTint="#CC99FF"
+            android:backgroundTint="#5a2f74"
             android:bottomLeftRadius="60dp"
             android:bottomRightRadius="60dp"
             android:padding="10dp"
             android:text="Register"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:fontFamily="sans-serif-condensed"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:topLeftRadius="90dp"
             android:topRightRadius="60dp"
