--- a/app/src/main/res/layout/verificationcode.xml
+++ b/app/src/main/res/layout/verificationcode.xml
@@ -23,6 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="208dp"
         android:text="Enter The Code Send To"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-condensed"
         android:textAlignment="center"
         android:textColor="#5a2f74"
         android:textSize="20sp"
@@ -57,6 +59,9 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="40dp"
         android:hint="Enter Your Pin"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-condensed"
+        android:textColor="#5a2f74"
         android:textColorHint="#5a2f74"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -69,7 +74,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="380dp"
         android:backgroundTint="#5a2f74"
-        android:text="Verify"
+        android:text=" Verify "
+        android:textSize="18dp"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-condensed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
