--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -10,6 +10,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:text="Edit your profle here"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-condensed"
         android:layout_centerHorizontal="true"
         android:textSize="22sp"
         android:layout_margin="10dp"
@@ -21,7 +23,7 @@
 
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:src="@drawable/bg"
+        android:src="@drawable/profile_user"
         android:layout_below="@+id/edit_profile_setting_text"
         android:id="@+id/profile_image_setting"
         android:layout_height="150dp"/>
