--- a/app/src/main/res/layout/activity_c_onfigure_user.xml
+++ b/app/src/main/res/layout/activity_c_onfigure_user.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="92dp"
         android:ems="10"
         android:hint="Enter your email address"
-        android:inputType="textPassword"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.644"
         app:layout_constraintStart_toStartOf="parent"
