--- a/app/src/main/res/layout/activity_c_onfigure_user.xml
+++ b/app/src/main/res/layout/activity_c_onfigure_user.xml
@@ -7,31 +7,70 @@
     android:layout_height="match_parent"
     tools:context=".COnfigureUser">
 
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="271dp"
+        android:layout_height="210dp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView3"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.057"
+        app:srcCompat="@drawable/forgotpass" />
+
     <EditText
         android:id="@+id/email_configure_user"
         android:layout_width="269dp"
         android:layout_height="40dp"
         android:layout_marginStart="109dp"
-        android:layout_marginTop="284dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="92dp"
+        android:drawableLeft="@drawable/ic_baseline_email_24"
         android:ems="10"
         android:hint="Enter your email address"
         android:inputType="textEmailAddress"
+        android:paddingLeft="10dp"
+        android:textAlignment="center"
+        android:textColorHint="#5a2f74"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.644"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
         android:id="@+id/verify_btn_configure_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="161dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="162dp"
+        android:backgroundTint="#a7acd9"
         android:text="Verify"
+        android:textColor="#5f0a87"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_configure_user" />
+        app:layout_constraintTop_toBottomOf="@+id/email_configure_user"
+        app:layout_constraintVertical_bias="0.202" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="335dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="284dp"
+        android:layout_marginEnd="40dp"
+        android:backgroundTint="#5a2f74"
+        android:fontFamily="@font/aclonica"
+        android:text="Recover Password"
+        android:textAlignment="center"
+        android:textColor="#5a2f74"
+        android:textSize="30sp"
+        android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView6" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
