--- a/app/src/main/res/layout/activity_c_onfigure_user.xml
+++ b/app/src/main/res/layout/activity_c_onfigure_user.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/background2"
+    android:background="@drawable/profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".COnfigureUser">
@@ -32,6 +32,7 @@
         android:inputType="textEmailAddress"
         android:paddingLeft="10dp"
         android:textAlignment="center"
+        android:textColor="#5a2f74"
         android:textColorHint="#5a2f74"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,9 +50,10 @@
         android:textColor="#5f0a87"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email_configure_user"
-        app:layout_constraintVertical_bias="0.202" />
+        app:layout_constraintVertical_bias="0.168" />
 
     <TextView
         android:id="@+id/textView3"
