--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,4 +28,8 @@
     </style>
 
     <style name="Theme.Watcher.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.Watcher.Customtheme">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
+    </style>
 </resources>
