--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -198,14 +198,32 @@
             </LinearLayout>
 
         </LinearLayout>
-        <Button
-            android:id="@+id/signout"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#5a2f74"
-            android:background="#5a2f74"
-            android:text="Sign Out"
-            android:layout_marginBottom="5dp"/>
+            android:gravity="center"
+
+            >
+            <Button
+                android:id="@+id/startBackgroundService"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:background="#5a2f74"
+                android:layout_marginEnd="5dp"
+                android:backgroundTint="#5a2f74"
+                android:text="START" />
+            <Button
+                android:id="@+id/signout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:background="#5a2f74"
+                android:backgroundTint="#5a2f74"
+                android:text="Sign Out" />
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
